--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,6 +24,8 @@ jobs:
       # SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
       # SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
       # SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
@@ -46,19 +48,7 @@ jobs:
         SNOWFLAKE_AUTHENTICATOR: ${{ secrets.SNOWFLAKE_AUTHENTICATOR }}
         SNOWFLAKE_PRIVATE_KEY: ${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
 
-    # export variables
-    # - name: Set Environment Variables
-    #   run: |
-    #     echo "export SNOWFLAKE_ACCOUNT=${SNOWFLAKE_ACCOUNT}" >> $GITHUB_ENV
-    #     echo "export SNOWFLAKE_USER=${SNOWFLAKE_USER}" >> $GITHUB_ENV
-    #     echo "export SNOWFLAKE_AUTHENTICATOR=${SNOWFLAKE_AUTHENTICATOR}" >> $GITHUB_ENV
-    #     echo "export SNOWFLAKE_PRIVATE_KEY=${SNOWFLAKE_PRIVATE_KEY}" >> $GITHUB_ENV
-    #     # echo "export SNOWFLAKE_PASSWORD=${SNOWFLAKE_PASSWORD}" >> $GITHUB_ENV
-    #     # echo "export SNOWFLAKE_ROLE=${SNOWFLAKE_ROLE}" >> $GITHUB_ENV
-    #     # echo "export SNOWFLAKE_WAREHOUSE=${SNOWFLAKE_WAREHOUSE}" >> $GITHUB_ENV
-    #     # echo "export SNOWFLAKE_DATABASE=${SNOWFLAKE_DATABASE}" >> $GITHUB_ENV
-    #     # echo "export SNOWFLAKE_SCHEMA=${SNOWFLAKE_SCHEMA}" >> $GITHUB_ENV
-        
+   
     - name: check-version
       run: terraform --version
 
